--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-star-rating": "^7.0.0",
     "leaflet": "^1.9.4",
     "ngx-toastr": "^19.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
